--- a/index.ipynb
+++ b/index.ipynb
@@ -412,9 +412,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Hi Jan, I'm so glad to be working with you!\",\n",
+       " \"Hi Joe, I'm so glad to be working with you!\",\n",
+       " \"Hi Avi, I'm so glad to be working with you!\"]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def greet_employees(): # function signature\n",
     "    welcome_messages = [] # begin function body\n",
@@ -422,6 +435,8 @@
     "        welcome_messages.append(\"Hi \" + new_employee.title() + \", I'm so glad to be working with you!\" )\n",
     "\n",
     "    return welcome_messages # return statement\n",
+    "\n",
+    "greet_employees()\n",
     "\n",
     "# no longer in function body"
    ]
